Add Aerobic Capacity Calculator Feature: Created AerobicCalculator.js with VO2Max and heart rate zones calculators, updated HomeScreen.js for navigation, added translations, implemented dark/light mode support

--- a/translations/en.json
+++ b/translations/en.json
@@ -99,5 +99,42 @@
   "added_weight": "Added Weight",
   "enter_added_weight": "Enter added weight (0 for no added weight)",
   "fill_all_required_fields": "Please fill in all required fields",
-  "invalid_input": "Invalid input"
+  "invalid_input": "Invalid input",
+  
+  "height": "Height",
+  "enter_height": "Enter your height",
+  "heart_rate_zones": "Heart Rate Zones",
+  "resting_heart_rate": "Resting Heart Rate",
+  "enter_resting_heart_rate": "Enter your resting heart rate",
+  "max_heart_rate": "Maximum Heart Rate",
+  "max_heart_rate_placeholder": "Auto calculated or enter manually",
+  "very_light": "Very Light",
+  "light": "Light",
+  "moderate": "Moderate",
+  "hard": "Hard",
+  "maximum": "Maximum",
+  "heart_rate_disclaimer": "Note: Heart rate zones may vary based on individual fitness, training status, and health conditions. Consult with professionals for personalized advice.",
+  
+  "vo2max_calculator": "VO2Max Calculator",
+  "hr_zone_calculator": "Heart Rate Zones",
+  "vo2max_description": "VO2Max is the maximum rate of oxygen consumption measured during incremental exercise. It's an indicator of cardiorespiratory fitness and aerobic endurance.",
+  "vo2max_result": "Your VO2 Max Result",
+  "vo2max_explanation": "Higher VO2Max values indicate better aerobic fitness. Elite athletes typically have values above 60 mL/kg/min.",
+  "hr_zone_description": "Heart rate training zones help optimize your workouts by targeting specific physiological adaptations based on exercise intensity.",
+  "hr_zone_results": "Your Heart Rate Zones",
+  "resting_hr": "Resting Heart Rate",
+  "max_hr": "Maximum Heart Rate",
+  "enter_max_hr": "Enter maximum heart rate",
+  "enter_resting_hr": "Enter resting heart rate",
+  "hr_zone_1": "Zone 1: Recovery",
+  "hr_zone_2": "Zone 2: Aerobic Base",
+  "hr_zone_3": "Zone 3: Tempo",
+  "hr_zone_4": "Zone 4: Threshold",
+  "hr_zone_5": "Zone 5: Maximum",
+  "hr_zone_1_desc": "Very light intensity, active recovery, improves basic endurance and fat metabolism.",
+  "hr_zone_2_desc": "Light intensity, improves aerobic capacity and fat utilization, builds endurance foundation.",
+  "hr_zone_3_desc": "Moderate intensity, improves aerobic power and efficiency, increases lactate threshold.",
+  "hr_zone_4_desc": "Hard intensity, increases maximum performance capacity, improves speed endurance.",
+  "hr_zone_5_desc": "Maximum intensity, develops maximum performance and speed, increases anaerobic capacity.",
+  "clear": "Clear"
 } 
