--- a/translations/zh.json
+++ b/translations/zh.json
@@ -99,5 +99,42 @@
   "added_weight": "附加重量",
   "enter_added_weight": "輸入附加重量 (0表示無附加重量)",
   "fill_all_required_fields": "請填寫必填項",
-  "invalid_input": "輸入無效"
+  "invalid_input": "輸入無效",
+  
+  "height": "身高",
+  "enter_height": "請輸入身高",
+  "heart_rate_zones": "心率區間",
+  "resting_heart_rate": "靜息心率",
+  "enter_resting_heart_rate": "請輸入靜息心率",
+  "max_heart_rate": "最大心率",
+  "max_heart_rate_placeholder": "自動計算或手動輸入",
+  "very_light": "非常輕鬆",
+  "light": "輕鬆",
+  "moderate": "中等",
+  "hard": "困難",
+  "maximum": "最大",
+  "heart_rate_disclaimer": "注意：心率區間因個人體能、訓練狀態和健康狀況而異。請諮詢專業人士獲取個人化建議。",
+  
+  "vo2max_calculator": "VO2Max計算器",
+  "hr_zone_calculator": "心率區間計算",
+  "vo2max_description": "VO2Max是指在漸進運動中測量的最大氧氣消耗率。它是心肺健康和有氧耐力的重要指標。",
+  "vo2max_result": "您的VO2Max結果",
+  "vo2max_explanation": "較高的VO2Max值表示更好的有氧健康狀況。頂尖運動員通常有超過60 mL/kg/min的數值。",
+  "hr_zone_description": "心率訓練區間幫助您根據運動強度針對特定的生理適應來優化您的訓練。",
+  "hr_zone_results": "您的心率區間",
+  "resting_hr": "靜息心率",
+  "max_hr": "最大心率",
+  "enter_max_hr": "請輸入最大心率",
+  "enter_resting_hr": "請輸入靜息心率",
+  "hr_zone_1": "區間1：恢復區",
+  "hr_zone_2": "區間2：有氧基礎區",
+  "hr_zone_3": "區間3：節奏區",
+  "hr_zone_4": "區間4：閾值區",
+  "hr_zone_5": "區間5：最大區",
+  "hr_zone_1_desc": "強度非常輕，積極恢復，改善基礎耐力和脂肪代謝。",
+  "hr_zone_2_desc": "強度輕，改善有氧能力和脂肪利用，建立耐力基礎。",
+  "hr_zone_3_desc": "強度中等，改善有氧功率和效率，提高乳酸閾值。",
+  "hr_zone_4_desc": "強度困難，提高最大表現能力，改善速度耐力。",
+  "hr_zone_5_desc": "最大強度，發展最大表現和速度，增加無氧能力。",
+  "clear": "清除"
 } 
