Add Health Record feature for tracking weight and body fat

--- a/translations/en.json
+++ b/translations/en.json
@@ -20,6 +20,7 @@
   "nutrient_converter": "Nutrient Converter",
   "max_effort": "Max Effort Converter",
   "aerobic": "Aerobic Capacity",
+  "health_record": "Health Record",
   
   "select_exercise": "Select Exercise",
   "weight": "Weight",
@@ -136,5 +137,32 @@
   "hr_zone_3_desc": "Moderate intensity, improves aerobic power and efficiency, increases lactate threshold.",
   "hr_zone_4_desc": "Hard intensity, increases maximum performance capacity, improves speed endurance.",
   "hr_zone_5_desc": "Maximum intensity, develops maximum performance and speed, increases anaerobic capacity.",
-  "clear": "Clear"
+  "clear": "Clear",
+  
+  "health_record_title": "Health Record",
+  "weight_tracking": "Weight Tracking",
+  "body_fat_tracking": "Body Fat Tracking",
+  "add_new_record": "Add New Record",
+  "edit_record": "Edit Record",
+  "delete_record": "Delete Record",
+  "date": "Date",
+  "weight_kg": "Weight (kg)",
+  "body_fat_percentage": "Body Fat %",
+  "note": "Note",
+  "optional_note": "Note (optional)",
+  "enter_body_fat": "Enter body fat percentage",
+  "save": "Save",
+  "view_all_records": "View All Records",
+  "no_records": "No records yet. Add your first record!",
+  "confirm_delete": "Confirm Delete",
+  "confirm_delete_message": "Are you sure you want to delete this record?",
+  "record_deleted": "Record deleted successfully",
+  "record_saved": "Record saved successfully",
+  "recent_records": "Recent Records",
+  "view_chart": "View Chart",
+  "last_30_days": "Last 30 Days",
+  "last_90_days": "Last 90 Days",
+  "all_time": "All Time",
+  "time_period": "Time Period",
+  "progress": "Progress"
 } 
