--- a/translations/zh.json
+++ b/translations/zh.json
@@ -20,6 +20,7 @@
   "nutrient_converter": "營養素換算",
   "max_effort": "最大激勵換算",
   "aerobic": "有氧能力計算",
+  "health_record": "健康記錄",
   
   "select_exercise": "選擇運動",
   "weight": "重量",
@@ -136,5 +137,32 @@
   "hr_zone_3_desc": "強度中等，改善有氧功率和效率，提高乳酸閾值。",
   "hr_zone_4_desc": "強度困難，提高最大表現能力，改善速度耐力。",
   "hr_zone_5_desc": "最大強度，發展最大表現和速度，增加無氧能力。",
-  "clear": "清除"
+  "clear": "清除",
+  
+  "health_record_title": "健康記錄",
+  "weight_tracking": "體重追蹤",
+  "body_fat_tracking": "體脂率追蹤",
+  "add_new_record": "添加新記錄",
+  "edit_record": "編輯記錄",
+  "delete_record": "刪除記錄",
+  "date": "日期",
+  "weight_kg": "體重 (公斤)",
+  "body_fat_percentage": "體脂率 %",
+  "note": "備註",
+  "optional_note": "備註 (選填)",
+  "enter_body_fat": "請輸入體脂率",
+  "save": "保存",
+  "view_all_records": "查看所有記錄",
+  "no_records": "尚無記錄。添加您的第一條記錄！",
+  "confirm_delete": "確認刪除",
+  "confirm_delete_message": "您確定要刪除此記錄嗎？",
+  "record_deleted": "記錄已成功刪除",
+  "record_saved": "記錄已成功保存",
+  "recent_records": "最近記錄",
+  "view_chart": "查看圖表",
+  "last_30_days": "最近30天",
+  "last_90_days": "最近90天",
+  "all_time": "全部時間",
+  "time_period": "時間段",
+  "progress": "進度"
 } 
