Update Training Plan module icon styling and create comprehensive app documentation

--- a/translations/en.json
+++ b/translations/en.json
@@ -84,6 +84,16 @@
   "shoulder_press": "Shoulder Press",
   "bench_press": "Bench Press",
   "general_model": "General Model",
+  "front_squat": "Front Squat",
+  "overhead_squat": "Overhead Squat",
+  "clean": "Clean",
+  "snatch": "Snatch",
+  "incline_bench": "Incline Bench Press",
+  "overhead_press": "Overhead Press",
+  "basic": "Basic Exercises",
+  "squat_variations": "Squat Variations",
+  "olympic_lifts": "Olympic Lifts",
+  "upper_body": "Upper Body",
   
   "cancel": "Cancel",
   
@@ -181,5 +191,103 @@
   "percentage_to_rpe": "Percentage to RPE",
   "rpe_explanation": "RPE 10: Maximum effort, could not do more reps\nRPE 9: Could do 1 more rep\nRPE 8: Could do 2 more reps\nRPE 7: Could do 3 more reps\nRPE 6: Could do 4 more reps",
   "calculate_from_rpe": "Calculate from RPE",
-  "calculate_from_percentage": "Calculate from Percentage"
+  "calculate_from_percentage": "Calculate from Percentage",
+
+  "vbt_title": "Velocity Based Training Calculator",
+  "vbt_description": "Velocity Based Training (VBT) adjusts training intensity based on movement speed, improving training efficiency and reducing overtraining risk.",
+  "measured_velocity": "Measured Velocity",
+  "vbt_result": "VBT Analysis Result",
+  "training_zone": "Training Zone",
+  "recommended_load": "Recommended Load",
+  "speed_zones": "Speed Zones",
+  "new_recording": "New Recording",
+  "how_to_use_vbt": "How to Use VBT Calculator",
+  "vbt_instructions": "1. Select the exercise you want to perform\n2. Position your phone to clearly capture your full movement\n3. Tap the red button to start recording\n4. Perform the exercise, ensuring the entire range of motion is visible\n5. The system will analyze movement velocity and provide training recommendations",
+  "maximal_strength": "Maximal Strength",
+  "strength_speed": "Strength-Speed",
+  "power": "Power",
+  "speed_strength": "Speed-Strength",
+  "speed": "Speed",
+  "beyond_zones": "Beyond Zones",
+  "no_camera_permission": "No Camera Permission",
+  "error": "Error",
+  "video_recording_failed": "Video Recording Failed",
+  "video_processing_failed": "Video Processing Failed",
+  "processing_video": "Processing Video...",
+  "ml_mode": "ML Mode",
+  "ml_mode_description": "ML mode provides deeper analysis including velocity consistency evaluation, fatigue analysis and technical efficiency scoring",
+  "analyzing": "Analyzing...",
+  "advanced_analysis": "Advanced Data Analysis",
+  "consistency_score": "Consistency Score",
+  "fatigue_trend": "Fatigue Trend",
+  "technical_efficiency": "Technical Efficiency",
+  "velocity_variance_analysis": "Velocity Variance Analysis",
+  "standard_deviation": "Standard Deviation",
+  "perform_advanced_analysis": "Perform Advanced Analysis",
+  "reset_data": "Reset Data",
+  "high": "High",
+  "medium": "Medium",
+  "low": "Low",
+  "multi_parameter_data": "Multi-Parameter Data",
+  "lifted_weight": "Lifted Weight",
+  "max_velocity": "Maximum Velocity",
+  "avg_velocity": "Average Velocity",
+  "displacement": "Displacement",
+  "training_history": "Training History",
+  "no_history": "No history records yet",
+  "save_analysis": "Save Analysis",
+  "data_saved": "Data saved to history",
+  "pca_regression": "PCA + Linear Regression Analysis",
+  "predicted_1rm_percentage": "Predicted 1RM Percentage",
+  "predicted_max_weight": "Predicted Maximum Weight",
+  "pca_dimensions": "PCA Dimensions",
+  "pca_explanation": "PCA dimensionality reduction helps prevent overfitting in multi-parameter models and improves prediction accuracy",
+  
+  "training_plan": "Training Plan",
+  "create_plan": "Create Plan",
+  "browse_templates": "Browse Templates",
+  "my_plans": "My Training Plans",
+  "no_plans": "You haven't created any training plans yet",
+  "create_first_plan": "Create your first plan now",
+  "select_goal": "Select Training Goal",
+  "marathon": "Marathon",
+  "triathlon": "Triathlon",
+  "strength": "Strength",
+  "fat_loss": "Fat Loss",
+  "crossfit": "CrossFit",
+  "custom_plan": "Custom Plan",
+  "confirm_delete": "Confirm Delete",
+  "confirm_delete_plan": "Are you sure you want to delete this training plan? This action cannot be undone.",
+  "plan_name": "Plan Name",
+  "plan_duration": "Duration (weeks)",
+  "training_frequency": "Training Days Per Week",
+  "training_intensity": "Training Intensity",
+  "beginner": "Beginner",
+  "intermediate": "Intermediate", 
+  "advanced": "Advanced",
+  "beginner_desc": "Suitable for those just starting training",
+  "intermediate_desc": "For those with 1-2 years of training experience",
+  "advanced_desc": "For those with 3+ years of training experience",
+  "use_periodization": "Use Periodized Training",
+  "periodization_desc": "Periodized training automatically divides your plan into different phases including base, intensity, and recovery cycles.",
+  "plan_notes": "Plan Notes (Optional)",
+  "creating_plan": "Creating Plan...",
+  "create_training_plan": "Create Training Plan",
+  "plan_created": "Training plan created successfully!",
+  "macro_cycle": "Macro Cycle",
+  "meso_cycle": "Meso Cycle",
+  "micro_cycle": "Micro Cycle",
+  "macro_cycle_desc": "Typically lasting 3-6 months, overall training cycle for specific goals",
+  "meso_cycle_desc": "Typically lasting 3-6 weeks, development phase focused on specific training adaptations",
+  "micro_cycle_desc": "Typically lasting 7-10 days, includes specific daily training arrangements",
+  "base_phase": "Base Phase",
+  "intensity_phase": "Intensity Phase",
+  "recovery_phase": "Recovery Phase",
+  "week": "Week",
+  "training_day": "Training Day",
+  "goal": "Goal",
+  "cycles": "Cycles",
+  "view_plan": "View Plan",
+  "edit_plan": "Edit Plan",
+  "delete_plan": "Delete Plan"
 } 
