--- a/translations/zh.json
+++ b/translations/zh.json
@@ -22,7 +22,7 @@
   "aerobic": "有氧能力計算",
   "health_record": "健康記錄",
   
-  "select_exercise": "選擇運動",
+  "select_exercise": "選擇訓練動作",
   "weight": "重量",
   "reps": "重複次數",
   "calculate": "計算",
@@ -84,6 +84,16 @@
   "shoulder_press": "肩推",
   "bench_press": "臥推",
   "general_model": "通用模型",
+  "front_squat": "前蹲",
+  "overhead_squat": "過頭蹲",
+  "clean": "抓舉",
+  "snatch": "挺舉",
+  "incline_bench": "上斜臥推",
+  "overhead_press": "頭頂推舉",
+  "basic": "基礎動作",
+  "squat_variations": "深蹲變體",
+  "olympic_lifts": "奧運舉重",
+  "upper_body": "上肢訓練",
   
   "cancel": "取消",
   
@@ -181,5 +191,103 @@
   "percentage_to_rpe": "百分比轉換為RPE",
   "rpe_explanation": "RPE 10：最大努力，無法做更多次數\nRPE 9：還能再做1次\nRPE 8：還能再做2次\nRPE 7：還能再做3次\nRPE 6：還能再做4次",
   "calculate_from_rpe": "從RPE計算",
-  "calculate_from_percentage": "從百分比計算"
+  "calculate_from_percentage": "從百分比計算",
+
+  "vbt_title": "速度依循訓練計算器",
+  "vbt_description": "速度依循訓練 (VBT) 根據動作執行速度來調整訓練強度，提高訓練效率和減少過度訓練風險。",
+  "measured_velocity": "測量速度",
+  "vbt_result": "VBT 分析結果",
+  "training_zone": "訓練區間",
+  "recommended_load": "建議負荷",
+  "speed_zones": "速度區間",
+  "new_recording": "新的錄製",
+  "how_to_use_vbt": "如何使用 VBT 計算器",
+  "vbt_instructions": "1. 選擇您要執行的訓練動作\n2. 將手機放置在能清晰拍攝到您完整動作的位置\n3. 點擊紅色按鈕開始錄製\n4. 執行訓練動作，確保整個動作路徑在畫面中\n5. 系統會分析動作速度並提供訓練建議",
+  "maximal_strength": "最大力量",
+  "strength_speed": "力量速度",
+  "power": "爆發力",
+  "speed_strength": "速度力量",
+  "speed": "速度",
+  "beyond_zones": "超出區間",
+  "no_camera_permission": "無法獲取相機權限",
+  "error": "錯誤",
+  "video_recording_failed": "視頻錄製失敗",
+  "video_processing_failed": "視頻處理失敗",
+  "processing_video": "正在處理視頻...",
+  "ml_mode": "機器學習模式",
+  "ml_mode_description": "機器學習模式提供更深入的分析，包括速度一致性評估、疲勞分析和技術效率評分",
+  "analyzing": "分析中...",
+  "advanced_analysis": "高級數據分析",
+  "consistency_score": "一致性評分",
+  "fatigue_trend": "疲勞趨勢",
+  "technical_efficiency": "技術效率",
+  "velocity_variance_analysis": "速度變異分析",
+  "standard_deviation": "標準差",
+  "perform_advanced_analysis": "進行高級數據分析",
+  "reset_data": "重置數據",
+  "high": "高",
+  "medium": "中",
+  "low": "低",
+  "multi_parameter_data": "多參數數據",
+  "lifted_weight": "舉起重量",
+  "max_velocity": "最大速度",
+  "avg_velocity": "平均速度",
+  "displacement": "位移",
+  "training_history": "訓練歷史記錄",
+  "no_history": "尚無歷史記錄",
+  "save_analysis": "保存分析結果",
+  "data_saved": "數據已保存到歷史記錄",
+  "pca_regression": "PCA + 線性回歸分析",
+  "predicted_1rm_percentage": "預測1RM百分比",
+  "predicted_max_weight": "預測最大重量",
+  "pca_dimensions": "PCA維度",
+  "pca_explanation": "PCA降維有助於減少多參數模型的過擬合，提高預測準確性",
+  
+  "training_plan": "訓練計劃",
+  "create_plan": "創建計劃",
+  "browse_templates": "瀏覽模板",
+  "my_plans": "我的訓練計劃",
+  "no_plans": "您尚未創建任何訓練計劃",
+  "create_first_plan": "立即創建您的第一個計劃",
+  "select_goal": "選擇訓練目標",
+  "marathon": "馬拉松",
+  "triathlon": "鐵人三項",
+  "strength": "增肌",
+  "fat_loss": "減脂",
+  "crossfit": "交叉訓練",
+  "custom_plan": "自定義計劃",
+  "confirm_delete": "確認刪除",
+  "confirm_delete_plan": "您確定要刪除這個訓練計劃嗎？此操作無法恢復。",
+  "plan_name": "計劃名稱",
+  "plan_duration": "持續週數",
+  "training_frequency": "每週訓練天數",
+  "training_intensity": "訓練強度",
+  "beginner": "初學者",
+  "intermediate": "中級", 
+  "advanced": "進階",
+  "beginner_desc": "適合剛開始訓練的人",
+  "intermediate_desc": "有1-2年訓練經驗的人",
+  "advanced_desc": "有3年以上訓練經驗的人",
+  "use_periodization": "使用週期化訓練",
+  "periodization_desc": "週期化訓練將自動將您的計劃分為不同階段，包括基礎、強度和恢復週期。",
+  "plan_notes": "計劃備註（選填）",
+  "creating_plan": "創建中...",
+  "create_training_plan": "創建訓練計劃",
+  "plan_created": "訓練計劃創建成功！",
+  "macro_cycle": "大週期",
+  "meso_cycle": "中週期",
+  "micro_cycle": "小週期",
+  "macro_cycle_desc": "通常持續3-6個月，針對特定目標的整體訓練週期",
+  "meso_cycle_desc": "通常持續3-6週，著重於特定訓練適應性的發展階段",
+  "micro_cycle_desc": "通常持續7-10天，包含每天的具體訓練安排",
+  "base_phase": "基礎階段",
+  "intensity_phase": "強度階段",
+  "recovery_phase": "恢復階段",
+  "week": "週",
+  "training_day": "訓練日",
+  "goal": "目標",
+  "cycles": "週期",
+  "view_plan": "查看計劃",
+  "edit_plan": "編輯計劃",
+  "delete_plan": "刪除計劃"
 } 
